# albert-spp

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  api_keys.example.json  app.py  compose.yml  config.py  deploy.sh  deps.py  docker-compose.yml  llm.py  llm_routing_table.example.json  pyproject.toml  requirements.txt  security.py  start.sh  subscriptions.py
.github/workflows/: build_and_deploy.yml
app/: Dockerfile  config.py  deps.py  llm.py  main.py  security.py  subscriptions.py
app/scripts/: arena.py  spp_fewshots.jinja
app/tests/: conftest.py  mockups.py  test_main.py
core/: __init__.py  legacy.py  llm.py  vllm.py
endpoints/: api.py  misc.py
schemas/: __init__.py  api.py
scripts/: arena.py  spp_fewshots.jinja
templates/: spp_fabrique_simple.jinja  spp_manual_fewshots.jinja
tests/: conftest.py  test_main.py
tests/mockups/: elasticsearch.py  llm.py  prompt_config.yml  simple_prompt_template.jinja
