[project]
name = "albert-spp"
version = "1.0.3"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.103.1",
    "pydantic==2.3.0",
    "pydantic_core==2.6.3",
    "python-dotenv==1.0.1",
    "uvicorn==0.23.2",
    "redis==5.0.2",
    "requests==2.31.0",
    "jinja2==3.1.4",
    "pyalbert==0.4.12",
]

# Tests

[project.optional-dependencies]
test = ["pytest==8.2.2", "fakeredis==2.23.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Packaging

[tool.setuptools]
py-modules = []

# Linter

[tool.ruff]
line-length = 100
